--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -10,10 +10,15 @@
     opacity: .5;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1023px) {
+    .header__logo {
+        padding-left: 27px;
+    }
+}
+
+@media screen and (max-width: 414px) {
     .header__logo {
       width: 104px;
       height: 24px;
-      padding-left: 27px;
     }
 }
