--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,5 @@
 .header {
-    display: flex;
-    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: 1fr;
+    border-bottom: 1px solid #545454b3;
 }
