--- a/blocks/wrapper/_place/wrapper_place_header.css
+++ b/blocks/wrapper/_place/wrapper_place_header.css
@@ -1,9 +1,15 @@
 .wrapper_place_header {
-    padding: 45px 0 40px;
+    padding-top: 45px;
 }
 
 @media screen and (max-width: 1023px) {
     .wrapper_place_header {
-        padding: 34px 0 36px;
+        padding-top: 34px;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    .wrapper_place_header {
+        width: 100%;
     }
 }
