--- a/blocks/wrapper/_place/wrapper_place_profile.css
+++ b/blocks/wrapper/_place/wrapper_place_profile.css
@@ -1,15 +1,17 @@
 .wrapper_place_profile {
-    padding: 0 0 58px;
+    padding-top: 40px;
+    padding-bottom: 58px;
 }
 
 @media screen and (min-width: 600px) and (max-width: 1023px) {
     .wrapper_place_profile {
-        padding: 0 27px 44px;
+        padding-top: 36px;
+        padding-bottom: 44px;
     }
 }
 
 @media screen and (max-width: 599px) {
     .wrapper_place_profile {
-        padding: 0 0 36px;
+        padding-bottom: 36px;
     }
 }
