--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -18,8 +18,8 @@
     .profile__info {
         padding: 26px 0 36px;
         grid-column: 1;
-        grid-template-columns: minmax(min-content, max-content);
-        gap: 14px 10px;
+        grid-template-columns: 1fr;
+        gap: 14px 9px;
         justify-content: center;
     }
 }
