--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -8,6 +8,7 @@
     margin-right: 20px;
     box-sizing: border-box;
     border: none;
+    outline: none;
     cursor: pointer;
     background-image: url(../../../images/like-button.svg);
     background-position: center;
@@ -19,4 +20,8 @@
 
 .element__like-button:hover {
     opacity: .5;
+}
+
+.element__like-button:focus {
+    background-image: url(../../../images/like-button-active.svg);
 }
