--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -5,6 +5,7 @@
     width: 150px;
     height: 50px;
     border: 2px #fff solid;
+    outline: none;
     cursor: pointer;
     padding: 0;
     background-color: #000000;
@@ -19,7 +20,7 @@
     opacity: .6;
 }
 
-@media screen and (max-width: 959px) {
+@media screen and (max-width: 719px) {
     .profile__add-button {
         grid-column: 1/span 3;
         grid-row: 2;
