--- a/blocks/profile/__caption/profile__caption.css
+++ b/blocks/profile/__caption/profile__caption.css
@@ -2,16 +2,21 @@
     grid-column: 1;
     grid-row: 2;
     margin: 0;
+    max-width: 336px;
     font-family: 'Inter', Arial, sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 18px;
     line-height: 1.22;
     color: #fff;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 599px) {
     .profile__caption {
+        max-width: 100%;
         font-size: 14px;
         line-height: 1.21;
         text-align: center;
