--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -3,7 +3,7 @@
     grid-template-columns: 120px minmax(min-content, max-content) 1fr;
 }
 
-@media screen and (min-width: 600px) and (max-width: 1023px) {
+@media screen and (min-width: 600px) and (max-width: 719px) {
     .profile {
       row-gap: 24px;
     }
@@ -12,5 +12,7 @@
   @media screen and (max-width: 599px) {
     .profile {
       grid-template-columns: 1fr;
+      align-items: center;
+      justify-items: center;
     }
   }
