--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -5,6 +5,7 @@
     width: 150px;
     height: 50px;
     border: 2px #fff solid;
+    border-radius: 2px;
     outline: none;
     cursor: pointer;
     padding: 0;
