--- a/blocks/wrapper/_place/wrapper_place_header.css
+++ b/blocks/wrapper/_place/wrapper_place_header.css
@@ -5,11 +5,8 @@
 @media screen and (max-width: 1023px) {
     .wrapper_place_header {
         padding-top: 34px;
-    }
-}
-
-@media screen and (max-width: 414px) {
-    .wrapper_place_header {
-        width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+        max-width: 100%;
     }
 }
