--- a/blocks/wrapper/wrapper.css
+++ b/blocks/wrapper/wrapper.css
@@ -1,12 +1,12 @@
 .wrapper {
     max-width: 880px;
-    width: 100%;
     margin: 0 auto;
     padding: 0;
 }
 
 @media screen and (max-width: 1023px) {
   .wrapper {
+    max-width: 100%;
     padding-right: 27px;
     padding-left: 27px;
   }
@@ -22,6 +22,5 @@
 @media screen and (max-width: 375px) {
   .wrapper {
     max-width: 282px;
-    width: 100%;
   }
 }
