--- a/blocks/edit-form/__title/edit-form__title.css
+++ b/blocks/edit-form/__title/edit-form__title.css
@@ -6,7 +6,7 @@
     font-weight: 900;
     font-style: normal;
     font-size: 24px;
-    line-height: 1.21
+    line-height: 1.21;
 }
 
 @media screen and (max-width: 539px) {
