--- a/blocks/edit-form/__submit-button/edit-form__submit-button.css
+++ b/blocks/edit-form/__submit-button/edit-form__submit-button.css
@@ -2,6 +2,7 @@
     margin: 0;
     min-height: 50px;
     background-color: #000;
+    border: none;
     border-radius: 2px;
     outline: none;
     font-family: 'Inter', Arial, sans-serif;
@@ -12,12 +13,13 @@
     color: #fff;
     text-align: center;
     cursor: pointer;
-    opacity: 1;
+    opacity: .13;
     transition: opacity .5s linear;
 }
 
 .edit-form__submit-button:hover {
-    opacity: .5;
+    opacity: 1;
+    filter: drop-shadow(0 4px 4px #00000040);
 }
 
 @media screen and (max-width: 539px) {
