--- a/pages/index.css
+++ b/pages/index.css
@@ -28,6 +28,7 @@
 @import "../blocks/element/__rectangle/element__rectangle.css";
 @import "../blocks/element/__image/element__image.css";
 @import "../blocks/element/__text/element__text.css";
+@import "../blocks/element/__delete-button/element__delete-button.css";
 @import "../blocks/element/__like-button/element__like-button.css";
 
 @import "../blocks/footer/footer.css";
